--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux-devtools-extension": "^2.13.9",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
