--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "semantic-ui-css": "^2.5.0",
